--- a/tarea-3/index.html
+++ b/tarea-3/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-MX">
 
 <head>
     <meta charset="UTF-8">
@@ -16,8 +16,41 @@
 </head>
 
 <body>
-    <p>Ejemplo japonés: ご飯が熱い。</p>
-    <p>Ejemplo español: Mañana es miércoles</p>
+    <!--<p>Ejemplo japonés: ご飯が熱い。</p>
+    <p>Ejemplo español: Mañana es miércoles</p>-->
+
+    <h2>La noche aplastante</h2>
+    <h4>Por Chris Mills</h4>
+    <h3>Capítulo 1: La oscura noche Era una noche oscura</h3>
+
+    <p>En algúnlugar, un búho ululó.La lluvia azotó el ...</p>
+    <h3> Capítulo 2: El silencio eterno Nuestro protagonista ni
+        susurrar pudo al ver esa sombría figura ... </h3>El espectro habla Habían pasado varias horas más,
+    cuando de repente el espectro se incorporó y exclamó: "¡Por favor, ten piedad de mi alma!"</p>
+    <ol>
+        <li>Pela el ajo y picarlo en trozos gruesos.</li>
+        <li>Retira las semillas y el tallo del pimiento, y cortarlo en trozos gruesos.</li>
+        <li>Mete todos los alimentos en un procesador de alimentos.</li>
+        <li>Pica todos los ingredientes hasta conseguir una pasta.</li>
+        <li>Si deseas un hummus "grueso", procésalo corto tiempo.</li>
+        <li>Pica durante más tiempo si se desea obtener un hummus "suave".</li>
+    </ol>
+
+    <p>Me <em>alegro</em> de que no llegues <em>tarde</em>.</p>
+    <p>Este líquido es <strong>altamente tóxico</strong>.</p>
+    <p>Cuento contigo. <strong>¡No llegues tarde!</strong></p>
+    <p>Este líquido es <strong>altamente tóxico</strong>
+        si lo bebes, <strong>podrías <em>morir</em></strong>.</p>
+
+
+    <a href="https://www.redbubble.com/es/i/pegatina/Gato-lindo-Bugcat-Capoo-gato-insecto-de-dev-ilyass/91582961.EJUG5">
+        <img src="images/bugcat.jpg" alt="Bugcat"></a>
+
+    <p>Enlace a <a href="proyectos/proyecto.html">proyecto.html</a>.</p>
+    <p>Enlace a <a href="documentos/tarea1.pdf">tarea1.pdf</a>.</p>
+    <p>Enlace a <a href="personales/info/personal.html">personal.html</a>.</p>
+
+
 </body>
 
 </html>
