--- a/tarea-3/index.html
+++ b/tarea-3/index.html
@@ -22,7 +22,7 @@
     <h2>La noche aplastante</h2>
     <h4>Por Chris Mills</h4>
     <h3>Capítulo 1: La oscura noche Era una noche oscura</h3>
-
+    <h2 id="Dirección_de_envío">Dirección de envío</h2>
     <p>En algúnlugar, un búho ululó.La lluvia azotó el ...</p>
     <h3> Capítulo 2: El silencio eterno Nuestro protagonista ni
         susurrar pudo al ver esa sombría figura ... </h3>El espectro habla Habían pasado varias horas más,
@@ -49,6 +49,37 @@
     <p>Enlace a <a href="proyectos/proyecto.html">proyecto.html</a>.</p>
     <p>Enlace a <a href="documentos/tarea1.pdf">tarea1.pdf</a>.</p>
     <p>Enlace a <a href="personales/info/personal.html">personal.html</a>.</p>
+
+    <p>La <a href="#Dirección_de_envío">Dirección de envío de la empresa</a> se encuentra al final
+        de esta página.</p>
+
+    <p>Hola</p>
+    <dl>
+        <dt>Descropción</dt>
+        <dd>Aqui va tu texto que deseas</dd>
+    </dl>
+    <blockquote>Hola, me llamo Anahi</blockquote>
+
+    <q>Esta es uha cita</q>
+
+    <cite>Esta es una refrencia</cite>
+
+
+    <p>I do <abbr title="Hypertext Markup Language">HTML</abbr></p>
+
+
+    <address></address>
+    <sub></sub>
+    <sup></sup>
+    <code></code>
+    <pre></pre>
+
+    <var></var>
+    <kbd></kbd>
+    <samp></samp>
+    <time></time>
+
+
 
 
 </body>
