--- a/tarea-3/personales/info/personal.html
+++ b/tarea-3/personales/info/personal.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    Hola mundo
+    <p>Enlace a <a href="index.html">index.html</a>.</p>
+    <p>Enlace a <a href="proyectos/proyecto.html">proyecto.html</a>.</p>
+    <p>Enlace a <a href="documentos/tarea1.pdf">tarea1.pdf</a>.</p>
+    
 </body>
 </html>
