--- a/tarea-3/personales/info/personal.html
+++ b/tarea-3/personales/info/personal.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Enlace a <a href="index.html">index.html</a>.</p>
+    <p>Enlace a <a href="C:/Users/RGB/Documents/GitHub/Desarrollo-de-aplicaciones-web/tarea-3/index.html">index.html</a>.</p>
     <p>Enlace a <a href="proyectos/proyecto.html">proyecto.html</a>.</p>
     <p>Enlace a <a href="documentos/tarea1.pdf">tarea1.pdf</a>.</p>
     
