--- a/tarea-3/proyectos/proyecto.html
+++ b/tarea-3/proyectos/proyecto.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Enlace a <a href="tarea-3/index.html">index.html</a>.</p>
+    <p>Enlace a <a href="C:/Users/RGB/Documents/GitHub/Desarrollo-de-aplicaciones-web/tarea-3/index.html">index.html</a>.</p>
     <p>Enlace a <a href="documentos/tarea1.pdf">tarea1.pdf</a>.</p>
     <p>Enlace a <a href="personales/info/personal.html">personal.html</a>.</p>
 
