--- a/practica-7/tienda-arte.html
+++ b/practica-7/tienda-arte.html
@@ -15,13 +15,14 @@
     </div>
   </header>
   <section>
-  <article>  
+  <article>
+    <div class="atu">
       <h2>En Construcción</h2>
       <b>
-        
       <p>Nuestro sitio web estará activo en</p>
       <div class="aty">
         <p>4 años, 3 meses y 2 días</p></b>
+      </div>  
       </div>
       <div class="two">
         <footer><a href="mailto:abc@abc.abc">Contáctanos </a> &nbsp;&nbsp;&nbsp;&nbsp;
